Avoid pulling in dependencies via static feature flag (#649)

--- a/librocksdb-sys/Cargo.toml
+++ b/librocksdb-sys/Cargo.toml
@@ -14,7 +14,7 @@ links = "rocksdb"
 [features]
 default = [ "static" ]
 jemalloc = ["tikv-jemalloc-sys"]
-static = ["libz-sys/static", "bzip2-sys/static"]
+static = ["libz-sys?/static", "bzip2-sys?/static"]
 snappy = []
 lz4 = []
 zstd = ["zstd-sys"]
